fixes visual overflow on deeplist title

--- a/packages/vizbuilder/src/components/Sidebar/select.css
+++ b/packages/vizbuilder/src/components/Sidebar/select.css
@@ -113,6 +113,7 @@
 
 .deeplist-title,
 .virtlist-title {
+  flex: 1 0;
   padding-left: 0.2rem;
   font-weight: 700;
   line-height: 1.2rem;
